fix: use command line options when running Clover to have proper date format